# aeroflot-tickets-monitoring

./: .env.example  README.md  constants.py  main.py  pyproject.toml
